app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  namespace: app
  name: app
  labels:
    name: app
