app/deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: nginx-server
  labels:
    name: nginx-server 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx-server
        image: docker.io/pasient0/simple-server:signed
        resources:
          limits: 
            cpu: "500m"
            memory: "128Mi"
        securityContext: 
          runAsNonRoot: true
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
