app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: servers
  name: nginx-server
  labels:
    name: nginx-server 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx-server
        image: docker.io/pasient0/simple-server:signed
        ports:
        - containerPort: 80
